--- a/_posts/2021-03-18-assignment/assignment.Rmd
+++ b/_posts/2021-03-18-assignment/assignment.Rmd
@@ -8,6 +8,7 @@ author:
 date: 03-18-2021
 output:
   distill::distill_article:
+    code_folding: true
     html_document:
     keep_md: true
     css: <link rel="stylesheet" href="path/to/css/splendor.css">
